# grammar-evaluator

./: .gitignore  ai21_api.py  cmd_main.py  constants.py  diff.py  grammar_checker.py  main.py  openai_api.py  opensource_api.py  prompts.py  pyproject.toml  sapling_api.py
.github/workflows/: main.yml
data/: all_data.csv  manual_run_results.docx  processed.csv  small_data.csv  studmodassess-07-02-24.csv  studmodassess-07-02-24.docx  studtopicassess-08-02-2024.csv  studtopicassess-08-02-2024.docx
pages/: evaluate.py
scripts/: combine.py  extract_table.py  rough.py
testing-apis/: openrouter.py  sample_ai21.py  sample_openrouter.py  sample_response.txt  wordtune_ouptut.json
